--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.5",
     "element-ui": "^2.15.14",
     "vue": "^2.6.11",
+    "vue-i18n": "^8.27.0",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
@@ -21,6 +22,7 @@
     "@vue/cli-plugin-vuex": "~4.5.15",
     "@vue/cli-service": "~4.5.15",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-component": "^1.1.1",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.12.0",
