--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "element-ui": "^2.15.14",
+    "swiper": "^5.4.5",
     "vue": "^2.6.11",
     "vue-i18n": "^8.27.0",
     "vue-router": "^3.2.0",
